Make confirm button in app sidebar comment field more visible. Make background colour of confirm button in text input have same background colour as the text input. Add border to "Add link | Link file" hover box that appears in text, also fix the styling for the text input when adding a link. (#271)
(cherry picked from commit 68a8013ffca5a6cd7424d5fd6c55d8354422f5e7)

--- a/css/apps/core/_text.scss
+++ b/css/apps/core/_text.scss
@@ -31,6 +31,17 @@
     }
 }
 
+#editor-wrapper .menububble {
+    border: 1px solid var(--color-border);
+
+    .menububble__form {
+        .menububble__input,
+        .menububble__button {
+            height: 44px;
+        }
+    }
+}
+
 /* Icons -------------------------------------------------------------------- */
 
 .icon-undo {
